--- a/package.json
+++ b/package.json
@@ -233,7 +233,7 @@
     "@vscode/windows-registry": "1.0.6",
     "windows-foreground-love": "0.4.0",
     "windows-mutex": "0.4.1",
-    "windows-process-tree": "0.3.4"
+    "windows-process-tree": "https://github.com/microsoft/vscode-windows-process-tree.git#ddcb5b32987f1bc7fe48f47465521e598afed796"
   },
   "resolutions": {
     "elliptic": "^6.5.3",
